--- a/trunk/isotropic_sqw.tex
+++ b/trunk/isotropic_sqw.tex
@@ -6,7 +6,7 @@
 \index{Sample environments}
 \index{Multiple scattering}
 
-\component{Isotropic\_Sqw}{V. Hugouvieux, E. Farhi}{Sqw$\_{coh}$, $\sigma_{coh}$, Sqw$\_{inc}$, $\sigma_{inc}, V_\rho, \sigma_{abs}, T$,$x_{width},y_{height},z_{thich},r_o, r_i$, thickness}{$q_{min}, q_{max}, \omega_{min}, \omega_{max}, d\phi$, order}{partly validated (Vanadium OK, PowderN more accurate for powders) }
+\component{Isotropic\_Sqw}{V. Hugouvieux, E. Farhi}{Sqw$\_{coh}$, $\sigma_{coh}$, Sqw$\_{inc}$, $\sigma_{inc}, V_\rho, \sigma_{abs}, T$,$x_{width},y_{height},z_{thick},r_o, r_i$, thickness}{$q_{min}, q_{max}, \omega_{min}, \omega_{max}, d\phi$, order}{partly validated (Vanadium OK, PowderN more accurate for powders) }
 
 \begin{figure}
   \begin{center}
@@ -16,13 +16,13 @@
 \label{f:isotropic-sqw}
 \end{figure}
 
-The component assumes that the sample has the structure of an isotropic material. This stands for liquids, glasses (amorphous systems), polymers, gaz, and may be extended to powders. It simulates coherent and incoherent neutron scattering, and may be used to model isotropic samples, but also sample environments as concentric geometries are possible. The main input for the component is $S(q,\omega)$ tables, or powder structure files.
+The component assumes that the sample has the structure of an isotropic material. This stands for liquids, glasses (amorphous systems), polymers, gases, and may be extended to powders. It simulates coherent and incoherent neutron scattering, and may be used to model isotropic samples, but also sample environments as concentric geometries are possible. The main input for the component is $S(q,\omega)$ tables, or powder structure files.
 
 \subsection{Neutron interaction with matter}
 
-When a neutron enters a material, according to usual models and letting the absorption aside to begin with, it 'sees' atoms as disks with a surface equal to the total scattering cross section of material $\sigma$. Each coherent and incoherent process is associated with a given probability to hit these cross-sections, according to $\sigma_{coh}$ or $\sigma_{inc}$. We may choose randomly a scattering position along the path, using e.g. an exponential decay probability. If the scattering condition is not satisfied, the neutron is transmitted, and leaves the sample. In any case, the absorption lowers the intensity according to an $e^{-\rho \sigma_{abs}d}$ absorption law along the propagation path $d$. In this process, the neutron is considered to be a particule.
+When a neutron enters a material, according to usual models and letting the absorption aside to begin with, it 'sees' atoms as disks with a surface equal to the total scattering cross section of material $\sigma$. Each coherent and incoherent process is associated with a given probability to hit these cross-sections, according to $\sigma_{coh}$ or $\sigma_{inc}$. We may choose randomly a scattering position along the path, using e.g. an exponential decay probability. If the scattering condition is not satisfied, the neutron is transmitted, and leaves the sample. In any case, the absorption lowers the intensity according to an $e^{-\rho \sigma_{abs}d}$ absorption law along the propagation path $d$. In this process, the neutron is considered to be a particle.
 
-Once the neutron 'knows' that something (terrible) is going to occur, it looks for a possible excitation to interact with. Then we turn to the wave description of the neutron, which interacts with the whole volume. The distribution of excitations, from which derives their relative intensity in the scattered beam, is simply the dynamic structre factor - or scattering law - $S(q,\omega)$. According to the definition of the density of states, we may use $g(\omega)$ as the probability law to scatter at a given energy transfer.
+Once the neutron 'knows' that something (terrible) is going to occur, it looks for a possible excitation to interact with. Then we turn to the wave description of the neutron, which interacts with the whole volume. The distribution of excitations, from which derives their relative intensity in the scattered beam, is simply the dynamic structure factor - or scattering law - $S(q,\omega)$. According to the definition of the density of states, we may use $g(\omega)$ as the probability law to scatter at a given energy transfer.
 
 The neutron leaves the scattering point when a suitable $(q, \omega)$ choice has been found to satisfy the conservation laws. The process is iterated until the neutron leaves the volume of the material, eventually producing multiple scattering contributions.
 
@@ -36,12 +36,13 @@ Following Squires (\cite{squires}, p63), the neutron differential scattering cro
 \begin{equation}\label{eq:d2sigma}
 \frac{d^2\sigma}{d\Omega dE_f} = \frac{\sigma}{4\pi}\frac{k_f}{k_i} N S(q, \omega)
 \end{equation}
-with usual notations: $N=\rho V$ is the number of atoms in the scattering volume $V$ with atomic number density $\rho$, $E_f, E_i, k_f, k_i$ are the energy and wavevectors of final and initial states respectively, $\sigma$ is the scattering cross-section, and $q,\omega$ are the wave-vector and energy transfer at the sample. The unit of the dynamical structure factor $S(q,\omega)$ is an inverse energy. We define its norm
+with usual notations: $N=\rho V$ is the number of atoms in the scattering volume $V$ with atomic number density $\rho$, $E_f, E_i, k_f, k_i$ are the energy and wavevectors of final and initial states respectively, $\sigma$ is the scattering cross-section, and $q,\omega$ are the wave-vector and energy transfer at the sample. The unit of the dynamical structure factor $S(q,\omega)$ is an inverse energy. We define its norm on a selected $q$ range:
 \begin{equation}
 |S| = \iint S(q,\omega) dq d\omega .
 \end{equation}
+The norm $\lim_{q \rightarrow \infty} |S| \simeq q$ for large $q$ values, and can only be defined on a restricted $q$ range.
 
-Some easely measureable coherent quantities in a liquid are the \emph{static pair correlation function} $g(r)$ and the \emph{structure factor} $S(q)$, defined as:
+Some easily measureable coherent quantities in a liquid are the \emph{static pair correlation function} $g(r)$ and the \emph{structure factor} $S(q)$, defined as:
 \begin{eqnarray}
 \rho g(\vec{r}) &=& \frac{1}{N} \sum_{i=1}^N \sum_{j \neq i} \langle \delta(\vec{r}+\vec{r}_i-\vec{r}_j) \rangle \\
 S(\vec{q}) &=&\int S(\vec q,\omega) d\omega \label{eq:sq} \\
@@ -53,28 +54,24 @@ The latter expression, in isotropic materials, may be Fourier transformed as:
 \label{eq:gr-sq}
 g(r)-1 =\frac{1}{2\pi^2 \rho} \int_0^\infty q^2 [S(q) -1] \frac{sin(qr)}{qr} dq
 \end{equation}
-Both $g(r)$ and $S(q)$ converge to unity for large $r$ and $q$ values respectively, and they are representative of the atoms spatial distribution. In a liquid $\lim_{q \rightarrow 0} S(q) = \rho k_B T \chi_T$ where $\chi_T=(\frac{\partial \rho}{\partial P})_{V,T}$ is the compressibility \cite{Egelstaff67,fischer05}. In perfect gases, $S(q) = 1$ for all $q$. These quantities are obtained experimentaly from diffractometers.
-In principle, $S_{inc}(q) = 1$, but a $q$ dependence is rather usual, partly due to the Debye-Waller factor $e^{-q^2 \langle u^2 \rangle}$. Anyway, $S(q)$ converges to unity at high $q$.
+Both $g(r)$ and $S(q)$ converge to unity for large $r$ and $q$ values respectively, and they are representative of the atoms spatial distribution. In a liquid $\lim_{q \rightarrow 0} S(q) = \rho k_B T \chi_T$ where $\chi_T=(\frac{\partial \rho}{\partial P})_{V,T}$ is the compressibility \cite{Egelstaff67,fischer05}. In perfect gases, $S(q) = 1$ for all $q$. These quantities are obtained experimentally from diffractometers.
+In principle, $S_{inc}(q) = 1$ in all materials, but a $q$ dependence is rather usual, partly due to the Debye-Waller factor $e^{-q^2 \langle u^2 \rangle}$. Anyway, $S_{inc}(q)$ converges to unity at high $q$.
 
-The static pair correlation function $g(r)$ is the probability to find a neighbouring atom at a given distance (unitless). Since $g(0) = 0$, Eq. (\ref{eq:gr-sq}) provides a useful normalization sum-rule for coherent $S(q)$:
+The static pair correlation function $g(r)$ is the probability to find a neighbouring atom at a given distance (unitless). Since $g(0) = 0$, Eq. (\ref{eq:gr-sq}) provides a useful normalisation sum-rule for coherent $S(q)$:
 \begin{equation}
 \label{eq:sq-nomr1}
-\int_0^\infty q^2 [S(q) - 1] dq = -2\pi^2\rho
+\int_0^\infty q^2 [S(q) - 1] dq = -2\pi^2\rho {\rm\ for\ coherent\ contribution.}
 \end{equation}
-This means that the integrated oscilations (around 1) of $S_{coh}(q)$ are directly related to the density of the material $\rho$.
+This means that the integrated oscillations (around 1) of $S_{coh}(q)$ are directly related to the density of the material $\rho$.
 In practice, the function $S(q)$ is often known on a restricted range $q \in [0, q_{max} ]$, due to either limitations in the sample molecular dynamics simulation, or the measurement itself.
-In first approximation we consider that Eq. (\ref{eq:sq-nomr1}) can be applied in this range, i.e. we neglect the large $q$ contributions providing $S(q)-1$ converges faster than $1/q^2$. Then, for any non-normalized coherent data set $S_{raw}$, we may obtain the normalized $S = \alpha S_{raw}$ with \cite{fischer05}
-\begin{equation}
-\label{eq:sq-nomr2}
-\alpha \simeq \frac{q^3_{max}/3 - 2\pi^2 \rho}{\int_0^{q_{max}} q^2 S_{raw}(q) dq }
-\end{equation}
-This coherent normalization rule is only applied when parameter \verb+norm_sqw=-1+, which is recommanded for isotropic liquid-like materials. It is usually not suited for powders (see below).
+In first approximation we consider that Eq. (\ref{eq:sq-nomr1}) can be applied in this range, i.e. we neglect the large $q$ contributions providing $S(q)-1$ converges faster than $1/q^2$. This is usually true after 2-3 oscillations of $S(q)$ in liquids.
+Then, in isotropic liquid-like materials, Eq. (\ref{eq:sq-nomr1}) provides a normalisation sum-rule for $S$.
 
 We may measure, e.g. with time-of-flight instruments, the \emph{density of states} $g_{\omega}(\omega)$  which is the fraction of modes whose energy lie between $\omega$ and $\omega+d\omega$ \cite{lovesey84}
 \begin{equation}
 g_{\omega}(\omega) = \frac{\int S(q,\omega) dq}{|S|} .
 \end{equation}
-This function is normalized to unity, $\int g_{\omega}(\omega) d\omega = 1$ and is a probability distribution of mode energies in the material.
+This function is normalised to unity, $\int g_{\omega}(\omega) d\omega = 1$ and is a probability distribution of mode energies in the material.
 
 \subsubsection{Drawing probabilities from $S(q, \omega)$}
 
@@ -92,7 +89,7 @@ The function $P(\omega)$ is the probability for an excitation to have an energy 
 
 Similarly, we define the conditional probability $P(q \mid \omega)$ to be, for each energy lying between $\omega$ and $\omega+d\omega$:
 \begin{eqnarray}\label{eq:Pqw}
-g_q(q\mid\omega) &=& \frac{S(q, \omega)}{\int S(q,\omega) dq} \\
+g_q(q\mid\omega) &=& \frac{S(q, \omega)}{S(q)} \\
 P(q \mid \omega)    &=& \int_0^q g_q(q'\mid\omega) dq'
 \end{eqnarray}
 The former $g_q$ is the density of wavevector transfers for a selected energy transfer, and the latter $P(q \mid \omega)$ is the probability for an excitation to have a wavevector lower than $q$, for a given energy transfer $\omega$.
@@ -138,27 +135,27 @@ From that law, we may compute the cumulated distribution, which gives the probab
 \begin{equation}
 d_{scatt} = -\frac{1}{\mu} \ln(1 - \xi[1 -e^{-\mu d_{out}}]).
 \end{equation}
-which then takes into account secondary extinction, originating from the decrease of the beam intensity through the sample (a kind of self shielding).
+which then takes into account secondary extinction, originating from the decrease of the beam intensity through the sample (a kind of self shielding).\index{Secondary extinction}
 The Monte Carlo choice of the scattering position in the sample accounts for the $N \sigma$ factor in Eq. (\ref{eq:d2sigma}).
 
 \subsubsection{Choosing the $q$ and $\omega$ transfer}
 
 If no $S(q, \omega)$ data is available and the scattering process has been chosen as incoherent, we set $\omega=0$ and select randomly an outgoing wave vector $\boldsymbol{k}_f$.
 
-In case the $S(q, \omega)$ data is available for the scattering process (coherent or incoherent), a random choice is made to select the energy transfert using $P(\omega)$ with the $g_\omega(\omega)$ probability distribution (Eq. \ref{eq:Pw}).
+In case the $S(q, \omega)$ data is available for the scattering process (coherent or incoherent), a random choice is made to select the energy transfer using $P(\omega)$ with the $g_\omega(\omega)$ probability distribution (Eq. \ref{eq:Pw}).
 Similarly, we use $P(q \mid \omega)$ to select a wavevector transfer (Eq. \ref{eq:Pqw}).
 
-Choosing a $(q, \omega)$ set and applying Eq. (\ref{eq:jointproba}), we have obtained a probabilistic normalized evaluation of the dynamical structure factor, which we multiply by the norm $|S|$ to obtain $S(q, \omega)$:
+Choosing a $(q, \omega)$ set and applying Eq. (\ref{eq:jointproba}), we have obtained a probabilistic normalised evaluation of the dynamical structure factor which controls the relative intensities of scattering processes from $S(q, \omega)$:
 \begin{equation}
 S(q, \omega) = |S|.g_\omega(\omega).g_q(q \mid \omega) .
 \end{equation}
-Then a selection between energy gain and loss is done with the detailed balance ratio $e^{-\hbar \omega / k_B T}$.
+Then a selection between energy gain and loss is done with the detailed balance ratio $e^{-\hbar \omega / k_B T}$. In the case of Stokes processes, neutron can not loose more than its own energy into the sample dynamics, so that $\omega < E_i$. This condition breaks the symmetry between up-scattering and down-scattering.
 
 Finally, a statistical weightening by a factor:
 \begin{equation}
-\pi_2 = \frac{k_f}{k_i} |S|
+\pi_2 = \frac{k_f}{k_i}
 \end{equation}
-is required to account for Eq. (\ref{eq:d2sigma}). The factor $4 \pi$ in Eq. (\ref{eq:d2sigma}) originates from the integration of events over space, and is thus implicitely included in the Monte Carlo choice of the scattering direction.
+is required to account for Eq. (\ref{eq:d2sigma}). The factor $4 \pi$ in Eq. (\ref{eq:d2sigma}) originates from the integration of events over space, and is thus implicitly included in the Monte Carlo choice of the scattering direction.
 
 \subsubsection{Choosing the scattered wave vector}
 
@@ -170,7 +167,7 @@ The next step is to check that conservation laws
 can be satisfied. These conditions are closely related to the method for selecting the outgoing wave vector direction.
 
 When the final wave vector has to be computed, the quantities $\vec{k}_i$, $\hbar \omega$ and $q = |\vec{q}|$ are known.
-From the energy conservation law Eq. (\ref{eq:w-transfert}), we select ramdomly one of the two roots, $k_f^+$ and $k_f^-$.
+From the energy conservation law Eq. (\ref{eq:w-transfert}), we select randomly one of the two roots, $k_f^+$ and $k_f^-$.
 The scattered wave vector is noted : $\vec{k}_f = k_f \vec{\hat k}_s$ where $\vec{\hat k}_s$ is a unit vector.\\
 Since we only know the norm of the scattering vector $\vec{q}$, the momentum conservation law Eq. (\ref{eq:q-transfert}) may be expressed as
 \begin{align}
@@ -208,6 +205,8 @@ Finally, we obtain :
 \vec{\hat k}_s = \frac{C^2}{k_i^2} \vec{k}_i + R (\cos \theta \vec{u}_1 + \sin \theta \vec{u}_2)
 \end{align}
 
+If the selection rules can not be verified, a new $(q,\omega)$ random choice is performed until success.
+
 \subsubsection{Extension to powder elastic scattering}
 
 In principle, the component can work in purely elastic mode if only the $\omega = 0$ column is available in $S$.
@@ -223,31 +222,31 @@ with $V_0 = 1/\rho$ being the volume of a lattice unit cell. Then we come to the
 S_{coh}(q) = \frac{4 \pi \rho}{\sigma_{coh}} \frac{z(q)}{q} |F_q|^2 {\rm\ in\ a\ powder.}
 \end{eqnarray}
 for each lattice Bragg peak wave vector $q$.
-The normalization rule Eq. (\ref{eq:sq-nomr2}) can not usually be applied for powders, as the $S(q)$ is a set of Dirac peaks for which the $\int q^2 S(q) dq$ is difficult to compute, and $S(q)$ does not converge to unity for large $q$.
+The normalisation rule Eq. (\ref{eq:sq-nomr1}) can not usually be applied for powders, as the $S(q)$ is a set of Dirac peaks for which the $\int q^2 S(q) dq$ is difficult to compute, and $S(q)$ does not converge to unity for large $q$.
 
-Of course, the component PowderN (see section \ref{powder}) can handle powder samples more efficiently (faster, better accuracy), but does not take into account multiple scattering.
+Of course, the component PowderN (see section \ref{powder}) can handle powder samples more efficiently (faster, better accuracy), but does not take into account multiple scattering and concentric geometries.
 
 \subsubsection{Important remarks and limitations}
 
 Since the choice of the interaction type, we know that the neutron \emph{must} scatter, with an appropriate $\vec k_f$ outgoing wave vector. If any of the choices in the method fails:
 \begin{enumerate}
-\item the roots $k_f^+$ and $k_f^-$ are imaginary, which means that conservation laws can not be satisfied and for instance the selected energy transfert is higher than the incoming neutron energy
+\item the roots $k_f^+$ and $k_f^-$ are imaginary, which means that conservation laws can not be satisfied and for instance the selected energy transfer is higher than the incoming neutron energy
 \item the radius of the target circle $R$ is imaginary
 \end{enumerate}
-then a new $(q, \omega)$ set is drawn, and the process is iterated until sucess or - at last - removal of the neutron event. This latter absorption is then reported at the end of the simulation, as it never occurs in reality - neutrons that scatter do find a suitable $(q, \omega)$ set.\index{Removed neutron events}
+then a new $(q, \omega)$ set is drawn, and the process is iterated until success or - at last - removal of the neutron event. These latter absorptions are then reported at the end of the simulation, as it never occurs in reality - neutrons that scatter do find a suitable $(q, \omega)$ set.\index{Removed neutron events}
 
-The $S(q,\omega)$ data sets should be as wide a possible in $q$ and $\omega$ range, else scattering conditions will be limited by the reduced data set (specially multiple scattering estimates). On the other hand, when $q$ and $\omega$ ranges are too large, some Monte carlo choices lead to scattering temptatives in non useful regions of $S$, which reduces dramatically the algorithm efficiency, possibly removing neutrons by underestimating intensity.\index{Bugs}
+The $S(q,\omega)$ data sets should be as wide a possible in $q$ and $\omega$ range, else scattering conditions will be limited by the reduced data set (specially multiple scattering estimates). On the other hand, when $q$ and $\omega$ ranges are too large, some Monte Carlo choices lead to scattering temptatives in non useful regions of $S$, which reduces dramatically the algorithm efficiency.
 
 The best settings are:
 \begin{enumerate}
-\item to have the widest $q$ and $\omega$ range for $S(q,\omega)$ data sets
-\item to either set $wmax$ and $qmax$ to the maximum scatterable energy and wavevetors (usually those from the incoming beam)
-\item alternatively request the automatic range optimization by setting parameter \verb+auto_qw=1+. This is \emph{higly recommanded}, but may sometimes miss a few neutrons if the $q,\omega$ beam range has been guessed too small.
+\item to have the widest $q$ and $\omega$ range for $S(q,\omega)$ data sets,
+\item to either set $wmax$ and $qmax$ to the maximum scatterable energy and wavevectors,
+\item or alternatively request the automatic range optimisation by setting parameter \verb+auto_qw=1+. This is recommended, but may sometimes miss a few neutrons if the $q,\omega$ beam range has been guessed too small.
 \end{enumerate}
 
-Focusing the $q$ and $\omega$ range (e.g. with 'auto\_qw=1'), to the one being able to scatter the incoming beam, when using the component does improve significantly the speed of the computation. Additionally, if you restrict the scattering the first order only (parameter order=1), then you may specify the angular vertical extension $d\phi$ of the scattering area to gain optimized focusing. This option does not apply when handling multiple scattering (which emits in $4\pi$ many times before exiting the sample).
+Focusing the $q$ and $\omega$ range (e.g. with 'auto\_qw=1'), to the one being able to scatter the incoming beam, when using the component does improve significantly the speed of the computation. Additionally, if you restrict the scattering to the first order only (parameter 'order=1'), then you may specify the angular vertical extension $d\phi$ of the scattering area to gain optimised focusing. This option does not apply when handling multiple scattering (which emits in $4\pi$ many times before exiting the sample).
 
-A bilinear interpolation for the $Q,\omega$ determination is recommanded to improve the accuracy of the scattered intensity, but it may be unactivated when setting parameter \verb+interpolate=0+. This will often result in a discrete $Q,\omega$ sampling.
+A bilinear interpolation for the $q,\omega$ determination is recommended to improve the accuracy of the scattered intensity, but it may be unactivated when setting parameter \verb+interpolate=0+. This will often result in a discrete $q,\omega$ sampling.
 
 As indicated in the previous section, the Isotropic\_Sqw component is not as accurate as PowderN for powders scattering for single scattering.
 
@@ -262,9 +261,9 @@ Parameter & type & meaning \\
     \hline
 Sqw\_coh   & string              & Coherent scattering data file name. Use 0 or "" to disable  \\
 Sqw\_inc   & string              & Incoherent scattering data file name. Use 0 or "" to scatter isotropically (Vanadium like)  \\
-sigma\_coh & [barns]      & Coherent scattering cross-section. 0 to disable \\
-sigma\_inc & [barns]      & Incoherent scattering cross-section. 0 to disable \\
-sigma\_abs & [barns]      & Absorption cross-section. 0 to disable  \\
+sigma\_coh & [barns]      & Coherent scattering cross-section. -1 to disable \\
+sigma\_inc & [barns]      & Incoherent scattering cross-section. -1 to disable \\
+sigma\_abs & [barns]      & Absorption cross-section. -1 to disable  \\
 V\_rho     & [\AA$^{-3}$] & atomic number density. May also be specified with molar weight \emph{weight} in [g/mol] and material \emph{density} in [g/cm$^3$] \\
 T          & [K]          & Temperature. 0 disables detailed balance \\
     \hline
@@ -275,9 +274,8 @@ radius\_o & [m] & dimensions of a cylinder shaped geometry  \\
 radius\_i & [m] & sphere geometry if radius\_i=0  \\
 thickness& [m] & thickness of hollow shape  \\
     \hline
-norm\_sqw & number  & When positive, the value is used as the integral of S(q,w). Null value uses computed integral. Any negative value will normalize on the density (for liquids, NOT recommanded for Powders) \\
-auto\_qw  & boolean & Automatically optimize probability tables during simulation (recommanded)  \\
-interpolate & boolean & Smooth $S(q,\omega)$ table (recommanded) \\
+auto\_qw  & boolean & Automatically optimise probability tables during simulation (recommended)  \\
+interpolate & boolean & Smooth $S(q,\omega)$ table (recommended) \\
 order     & integer & Limit multiple scattering up to given order. 0 means no limitations  \\
 concentric& boolean & Enables to 'enter' inside concentric hollow geometries  \\
     \hline
@@ -294,12 +292,12 @@ The geometry for the component may be box, cylinder and sphere shaped, either fi
 \begin{itemize}
 \item {\bf box}: dimensions are $x_{width} \times y_{height} \times z_{thick}$.
 \item {\bf box, hollow}: \emph{idem}, and the side wall thickness is set with $thickness$.
-\item {\bf cylinder}: dimensions are $r_o$ for the radius and $y_{height}$ for the heigh.
+\item {\bf cylinder}: dimensions are $r_o$ for the radius and $y_{height}$ for the height.
 \item {\bf cylinder, hollow}: \emph{idem}, and hollow part is set with either $r_i$ internal radius, or $thickness$.
 \item {\bf sphere}: dimension is $r_o$ for the radius.
 \item {\bf sphere, hollow}: \emph{idem}, and hollow part is set with either $r_i$ internal radius, or $thickness$.
 \end{itemize}
-The AT position corresponds to the center of the sample.
+The AT position corresponds to the centre of the sample.
 
 Hollow shapes are particularly useful to model complex sample environments. Refer to section below for more details on this topic.
 
@@ -307,13 +305,13 @@ Hollow shapes are particularly useful to model complex sample environments. Refe
 
 The material behaviour is specified through the total scattering cross-sections $\sigma_{coh}$, $\sigma_{inc}$, $\sigma_{abs}$, and the $S(q, \omega)$ data files.
 
-If you are lucky enough to have access to separated coherent and incoherent contributions (e.g. from material simulation), simply set Sqw\_coh and Sqw\_inc paremeter to the files names. If on the other hand you have access to a global data set containing incoherent scattering as well (e.g. the result of a previous experiment), use Sqw\_coh parameter, set the $\sigma_{coh}$ parameter to the sum of both contributions $\sigma_{coh}+\sigma_{inc}$, and set $\sigma_{inc}=0$. This way we only use one of the two implemented  scattering channels. Such global data sets may originate from previous experiments, as far as you have applied all known corrections (multiple scattering, geometry, ...).
+If you are lucky enough to have access to separated coherent and incoherent contributions (e.g. from material simulation), simply set Sqw\_coh and Sqw\_inc paremeter to the files names. If on the other hand you have access to a global data set containing incoherent scattering as well (e.g. the result of a previous experiment), use Sqw\_coh parameter, set the $\sigma_{coh}$ parameter to the sum of both contributions $\sigma_{coh}+\sigma_{inc}$, and set $\sigma_{inc}=-1$. This way we only use one of the two implemented  scattering channels. Such global data sets may originate from previous experiments, as far as you have applied all known corrections (multiple scattering, geometry, ...).
 
-In any case, the accuracy of the $S(q, \omega)$ data limits the $Q$ and $\omega$ resolution of the simulation, eventhough a bilinear interpolation is performed in order to smooth a too coarse binning. The sampling of data files should then be as thin as possible.
+In any case, the accuracy of the $S(q, \omega)$ data limits the $q$ and $\omega$ resolution of the simulation, eventhough a bilinear interpolation is performed in order to smooth binning. The sampling of data files should then be as thin as possible.
 
 If the Sqw\_inc parameter is left unset but the $\sigma_{inc}$ is \emph{not} zero, an isotropic incoherent elastic scattering is used, just like the V\_sample component (see section \ref{s:v_sample}).
 
-Anyway, as explained below, it is also possible to only simulate the elastic scattering from a powder file (see below). Moreover, as there are two process channels (coherent and incoherent), it is possible to simulate a mixture of two powders, with fractions proportional to $\sigma_{coh}$ and $\sigma_{inc}$.
+Anyway, as explained below, it is also possible to simulate the elastic scattering from a powder file (see below). Moreover, as there are two process channels (coherent and incoherent), it is possible to simulate a mixture of two powders, with fractions proportional to $\sigma_{coh}$ and $\sigma_{inc}$.
 
 \subsubsection{File formats: $S(q,\omega)$ inelastic scattering}
 
@@ -324,9 +322,8 @@ The format of the data files is free text, consisting of three numerical block, 
 \item A matrix of size $m$ rows by $n$ columns, of $S(q, \omega)$ values, in meV$^{-1}$.
 \end{enumerate}
 Any line beginning with any character of \verb+#;/%+ is considered to be a comment, and lines which can not be read as vectors/matrices are ignored.
-Example files are listed as \verb+*.sqw+ files in directory \verb+MCSTAS/data+.
 
-The file header may optionally contain parameter settings for the material, as comments, with keywords as is the following example:
+The file header may optionally contain parameter settings for the material, as comments, with keywords as in the following example:
 \begin{verbatim}
   #V_0         0.07
   #sigma_abs   5
@@ -336,10 +333,10 @@ The file header may optionally contain parameter settings for the material, as c
 \end{verbatim}
 Some \verb+sqw+ data files are included in the \MCS\ distribution data directory, and they contain material parameter settings in their header, so that you may use:
 \begin{verbatim}
-Isotropic_Sqw(<geometry parameters>, Sqw_coh="He4.sqw", T=10)
+Isotropic_Sqw(<geometry parameters>, Sqw_coh="He4_liq_coh.sqw", T=4)
 \end{verbatim}
 
-A table of $S(q,\omega)$ data files for a few liquids are listed in Table \ref{t:liquids-data} (page \pageref{t:liquids-data}).
+Example files are listed as \verb+*.sqw+ files in directory \verb+MCSTAS/data+. A table of $S(q,\omega)$ data files for a few liquids are listed in Table \ref{t:liquids-data} (page \pageref{t:liquids-data}).
 
 \subsubsection{File formats: $S(q)$ liquids}
 
@@ -347,7 +344,7 @@ This file format provides a mean to import directly an $S(q)$ data set, when set
 \begin{verbatim}
   powder_format=qSq
 \end{verbatim}
-The 'Sqw\_coh' (or 'Sqw\_inc') file should contains a single numerical block, which column assignment is defaulted as $q$ and $S(q)$ being the first and second columns respectively. This may be overridden from the file header with '\#column' keywords, as in the example:
+The 'Sqw\_coh' (or 'Sqw\_inc') file should contains a single numerical block, which column assignment is defaulted as $q$ and $S(q)$ being the first and second column respectively. This may be overridden from the file header with '\#column' keywords, as in the example:
 \begin{verbatim}
   #column_q  2
   #column_Sq 1
@@ -375,14 +372,14 @@ The last two parameters may as well be specified in the data file header with li
 The powder description is then translated into $S(q)$ by using Eq. (\ref{eq:sq-F2}).
 In this case, the density $\rho = n/V_0$ is the number of atoms in the inverse volume of the unit cell.
 
-As the component builds an $S(q)$ from the powder structure description, the accuracy of the Isotropic\_Sqw component is limited by the binning during that conversion. This is usually enough to describe sample environments including powders (aluminium, copper, ...), but it is recommanded to rather use PowderN for faster and accurate powder diffraction, eventthough this latter does not implement multiple scattering.
+As the component builds an $S(q)$ from the powder structure description, the accuracy of the Isotropic\_Sqw component is limited by the binning during that conversion. This is usually enough to describe sample environments including powders (aluminium, copper, ...), but it is recommended to rather use PowderN for faster and accurate powder diffraction, eventthough this latter does not implement multiple scattering.
 
 Such files can only handle elastic scattering. A list of common powder definition files is available in Table \ref{t:powders-data} (page \pageref{t:powders-data}).
 
 \subsubsection{Concentric geometries, sample environment}
 \index{Sample environments}
 
-The component has been designed in a way which enables to describe complex imbricated set-ups, i.e. what you need to simulate sample environments. To do so, one has first to use hollow shapes, they keep in mind that each surrounding geometry should be first declared before the central position (usially the sample) with the \verb+concentric=1+ parameter, but also duplicated (with an other instance name) at a symetric position with regards to the centre as in the example (shown in Fig. \ref{f:isotropic-sqw}):
+The component has been designed in a way which enables to describe complex imbricated set-ups, i.e. what you need to simulate sample environments. To do so, one has first to use hollow shapes, then keep in mind that each surrounding geometry should be first declared before the central position (usually the sample) with the \verb+concentric=1+ parameter, but also duplicated (with an other instance name) at a symmetric position with regards to the centre as in the example (shown in Fig. \ref{f:isotropic-sqw}):
 \begin{verbatim}
 COMPONENT s_in=Isotropic_Sqw(
   thickness=0.001, radius_o=0.02, yheight=0.015,
@@ -391,7 +388,7 @@ AT (0,0,1) RELATIVE a
 
 COMPONENT sample=Isotropic_Sqw(
   xwidth=0.01, yheight=0.01, zthick=0.01,
-  Sqw_coh="He4_coh.sqw")
+  Sqw_coh="Rb_liq_coh.sqw")
 AT (0,0,1) RELATIVE a
 
 COMPONENT s_out=Isotropic_Sqw(
@@ -404,9 +401,9 @@ In principle, the number of surrounding shells is not restricted.
 The only restriction is that neutrons that scatter (in $4\pi$) can not come back in the instrument description, so that some of the multiple scattering events are lost. Namely, in the previous example, neutrons scattered by the outer wall of the cryostat \verb+s_out+ can not come back to the sample or to the other cryostat wall \verb+s_in+. As these neutrons have usually few chances to reach the rest of the simulation, we expect that the approximation is fair.
 
 \subsection{Validation}
-For Vanadium incoherent scattering mode, V\_sample, PowderN, Single\_crystal and Isotropic\_Sqw produce equivalent results, eventhough the two later are more accurate (geometry, multiple scattering). Execution times are equivalent.
+For constant incoherent scattering mode, V\_sample, PowderN, Single\_crystal and Isotropic\_Sqw produce equivalent results, eventhough the two later are more accurate (geometry, multiple scattering). Execution times are equivalent.
 
-Compared to the PowderN component, the $S(q)$ method is twice slower in computation time (but often brings more statistics), and intensity is usually lower by a factor 1 to 2. The PowderN component is intrinsically more accurate as each Bragg peak is handled separately as an exact Dirac peak, with optional $\Delta q$ spreading. In Isotropic\_Sqw, an approximated $S(q)$ table is built from the $F^2$ data, and is coarser.
+Compared with the PowderN component, the $S(q)$ method is twice slower in computation time (but often brings more statistics), and intensity is usually within 20 \%. The PowderN component is intrinsically more accurate as each Bragg peak is handled separately as an exact Dirac peak, with optional $\Delta q$ spreading. In Isotropic\_Sqw, an approximated $S(q)$ table is built from the $F^2$ data, and is coarser.
 
 
 
