--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -101,7 +101,7 @@ becomes the product of all contributions
 \label{e:probprod}
 p = p_n = p_0 \prod_{j=1}^n \pi_j .
 \end{equation}
-For convenience, the value of $p$ is updated (within each component)
+Each adjustement factor should be $0 < \pi_j < 1$, except in special circumstances, so that total flux can only decrease through the simulation. For convenience, the value of $p$ is updated (within each component)
 during the simulation.
 
 Simulation by weight adjustment is performed
