--- a/trunk/powderN.tex
+++ b/trunk/powderN.tex
@@ -26,14 +26,30 @@ Other column-based file formats may also be imported e.g. with parameters such a
 In the latter case, the indices define order of columns parameters
 multiplicity, lattice spacing, $F^2$, Debye-Waller factor and intrinsic line width.
 
+The column signification may as well explicitely be set in the data file header using any of the lines:
+\begin{verbatim}
+  #column_j     <index of the multiplicity 'j' column>
+  #column_d     <index of the d-spacing 'd' column>
+  #column_F2    <index of the squared str. factor '|F|^2' column [b]>
+  #column_F     <index of the structure factor norm '|F|' column>
+  #column_DW    <index of the Debye-Waller factor 'DW' column>
+  #column_Dd    <index of the relative line width Delta_d/d 'Dd' column>
+  #column_inv2d <index of the 1/2d=sin(theta)/lambda 'inv2d' column>
+  #column_q     <index of the scattering wavevector 'q' column>
+\end{verbatim}
+
 Other component parameters may as well be specified in the data file
 header with lines e.g.:
 \begin{verbatim}
-  #Vc
-  #sigma_abs
-  #sigma_inc
-  #Debye_Waller
-  #Delta_d/d
+  #V_rho        <value of atom number density [at/Angs^3]>
+  #Vc           <value of unit cell volume Vc [Angs^3]>
+  #sigma_abs    <value of Absorption cross section [barns]>
+  #sigma_inc    <value of Incoherent cross section [barns]>
+  #Debye_Waller <value of Debye-Waller factor DW>
+  #Delta_d/d    <value of Detla_d/d width for all lines>
+  #density      <value of material density [g/cm^3]>
+  #weight       <value of material molar weight [g/mol]>
+  #nb_atoms     <value of number of atoms per unit cell>
 \end{verbatim}
 
 Further details on file formats are available in the \verb+mcdoc+ page
